# shm-spscqueue

./: README.md  shm_spsc.cpp  shm_spsc.h
demo/: CMakeLists.txt  send_read.cpp  static_rate.cpp
